@@ -2,38 +2,28 @@ package ru.kevdev.PvDeclarationBot.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.event.ContextRefreshedEvent;
-import org.springframework.context.event.EventListener;
 import org.springframework.dao.InvalidDataAccessResourceUsageException;
 import org.springframework.stereotype.Service;
-import org.telegram.telegrambots.bots.TelegramLongPollingBot;
-import org.telegram.telegrambots.meta.TelegramBotsApi;
 import org.telegram.telegrambots.meta.api.methods.send.SendDocument;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.InputFile;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
-import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
-import org.telegram.telegrambots.updatesreceivers.DefaultBotSession;
+import ru.kevdev.PvDeclarationBot.exception.InvalidUserInputException;
 import ru.kevdev.PvDeclarationBot.model.Bot;
 import ru.kevdev.PvDeclarationBot.model.Declaration;
 import ru.kevdev.PvDeclarationBot.model.Product;
 import ru.kevdev.PvDeclarationBot.model.User;
 import ru.kevdev.PvDeclarationBot.repo.ProductRepo;
+
 import java.io.File;
 import java.util.*;
-
 import static ru.kevdev.PvDeclarationBot.utils.Constant.*;
 
 @Service
 @RequiredArgsConstructor
 public class BotService {
-	@Value("${bot-name}")
-	private String botName;
-	@Value("${bot-token}")
-	private String botToken;
 	private final UserService userService;
 	private final ChatService chatService;
 	private final ProductRepo productRepo;
@@ -59,173 +49,193 @@ public class BotService {
 			doAuthorization(bot, curInput);
 			return;
 		}
-//		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_ERP_CODE)) {
-//			execute(collectAnswer(chatId, "Загружаю файл..."));
-//			getDeclarationByErpCode(curInput, chatId);
-//			return;
-//		}
-//		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_BARCODE)) { //если посл.команда getbybarcode, значит введено штрихкод
-//			getIndustrialSites(curInput, chatId);
-//			return;
-//		}
-//		if (lastCbq != null && lastCbq.equals(GET_MOCK_BY_ERP_CODE)) {
-//			execute(collectAnswer(chatId, "Загружаю файл..."));
-//			getLabelMockupsByErpCode(curInput, chatId);
-//			return;
-//		}
-//		//обратка бессмысленного ввода в поле, например, когда ожидается ввод команды, а приходит сообщение
-//		execute(collectAnswer(chatId, BAD_INPUT));
+		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_ERP_CODE)) {
+			bot.execute(collectAnswer(chatId, "Загружаю файл..."));
+			getDeclarationByErpCode(bot, curInput, chatId);
+			return;
+		}
+		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_BARCODE)) { //если посл.команда getbybarcode, значит введено штрихкод
+			getIndustrialSites(bot, curInput, chatId);
+			return;
+		}
+		if (lastCbq != null && lastCbq.equals(GET_MOCK_BY_ERP_CODE)) {
+			bot.execute(collectAnswer(chatId, "Загружаю файл..."));
+			getLabelMockupsByErpCode(bot, curInput, chatId);
+			return;
+		}
+		//обратка бессмысленного ввода в поле, например, когда ожидается ввод команды, а приходит сообщение
+		bot.execute(collectAnswer(chatId, BAD_INPUT));
 	}
 
 	@SneakyThrows
 	//если пришло команда через кнопку
 	public void callBackQueryProcessing(Bot bot, Update update) {
-//		chatId = update.getCallbackQuery().getMessage().getChatId();
-//		curCbq = update.getCallbackQuery().getData();
-//
-//		if (curCbq.equalsIgnoreCase(AUTHORIZATION)) {
-//			execute(collectAnswer(chatId, "Введите в текстовое поле ваш рабочий email"));
-//			lastCbq = curCbq;
-//			return;
-//		}
-//		if (curCbq.equalsIgnoreCase(GET_DECLARATION)) {
-//			kb = InlineKeyboardMarkup.builder()
-//					.keyboardRow(List.of(getButton("по КОДу ERP", GET_DECL_BY_ERP_CODE)))
-//					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_DECL_BY_BARCODE)))
-//					.build();
-//			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
-//			lastCbq = curCbq;
-//			return;
-//		}
-//		if (curCbq.equalsIgnoreCase(GET_DECL_BY_ERP_CODE)) {
-//			execute(collectAnswer(chatId, "Введите код ЕРП"));
-//			lastCbq = curCbq;
-//			return;
-//		}
-//		if (curCbq.equalsIgnoreCase(GET_DECL_BY_BARCODE)) {
-//			execute(collectAnswer(chatId, "Введите штрихкод"));
-//			lastCbq = curCbq;
-//			return;
-//		}
-//		if (lastCbq.equals(GET_DECL_BY_BARCODE)) {
-//			getDeclarationByIndustrialSiteAndBarcode(curCbq, chatId);
-//			return;
-//		}
-//		if (curCbq.equalsIgnoreCase(GET_QUALITY)) {
-//			execute(collectAnswer(chatId, "Извиняюсь, функционал в стадии разработки"));
-//			return;
-//		}
-//		if (curCbq.equalsIgnoreCase(GET_LABEL_MOCKUP)) {
-//			kb = InlineKeyboardMarkup.builder()
-//					.keyboardRow(List.of(getButton("по КОДу ERP", GET_MOCK_BY_ERP_CODE)))
-//					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_MOCK_BY_BARCODE)))
-//					.build();
-//			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
-//			lastCbq = curCbq;
-//			return;
-//		}
-//		execute(collectAnswer(chatId, "ОШИБКА --> Неизвестная команда"));
+		chatId = update.getCallbackQuery().getMessage().getChatId();
+		curCbq = update.getCallbackQuery().getData();
+
+		if (curCbq.equalsIgnoreCase(AUTHORIZATION)) {
+			bot.execute(collectAnswer(chatId, "Введите в текстовое поле ваш рабочий email"));
+			lastCbq = curCbq;
+			return;
+		}
+		if (curCbq.equalsIgnoreCase(GET_DECLARATION)) {
+			kb = InlineKeyboardMarkup.builder()
+					.keyboardRow(List.of(getButton("по КОДу ERP", GET_DECL_BY_ERP_CODE)))
+					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_DECL_BY_BARCODE)))
+					.build();
+			bot.execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
+			lastCbq = curCbq;
+			return;
+		}
+		if (curCbq.equalsIgnoreCase(GET_DECL_BY_ERP_CODE)) {
+			bot.execute(collectAnswer(chatId, "Введите код ЕРП"));
+			lastCbq = curCbq;
+			return;
+		}
+		if (curCbq.equalsIgnoreCase(GET_DECL_BY_BARCODE)) {
+			bot.execute(collectAnswer(chatId, "Введите штрихкод"));
+			lastCbq = curCbq;
+			return;
+		}
+		if (lastCbq.equals(GET_DECL_BY_BARCODE)) {
+			getDeclarationByIndustrialSiteAndBarcode(bot, curCbq, chatId);
+			return;
+		}
+		if (curCbq.equalsIgnoreCase(GET_QUALITY)) {
+			bot.execute(collectAnswer(chatId, "Извиняюсь, функционал в стадии разработки"));
+			return;
+		}
+		if (curCbq.equalsIgnoreCase(GET_LABEL_MOCKUP)) {
+			kb = InlineKeyboardMarkup.builder()
+					.keyboardRow(List.of(getButton("по КОДу ERP", GET_MOCK_BY_ERP_CODE)))
+					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_MOCK_BY_BARCODE)))
+					.build();
+			bot.execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
+			lastCbq = curCbq;
+			return;
+		}
+		bot.execute(collectAnswer(chatId, "ОШИБКА --> Неизвестная команда"));
 	}
-//
-//	@SneakyThrows
-//	private void getDeclarationByIndustrialSiteAndBarcode(String indSiteAndBarcode, Long chatId) {
-//		//под 0 - площадка, под 1 - штрихкод
-//		String[] data = indSiteAndBarcode.split(",");
-//		List<Product> products = productRepo.findByIndustrialSiteAndBarcode(data[0], data[1]);
-//		downloadDeclaration(products);
-//		execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
-//	}
-//
-//	@SneakyThrows
-//	private void getIndustrialSites(String barcode, Long chatId) {
-//		if (isStringNotNumeric(barcode)) { //проверка что сообщение не содержит букв
-//			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-//			return;
-//		}
-//		List<String> industrialSites = productRepo.getIndustrialSitesByProductBarcode(barcode);
-//		if (industrialSites.isEmpty()) {
-//			execute(collectAnswer(chatId, "Не найдены пром.площадки для выбора"));
-//			execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
-//			return;
-//		}
-//		InlineKeyboardMarkup kb = new InlineKeyboardMarkup();
-//		List<List<InlineKeyboardButton>> buttonsRows = new ArrayList<>();
-//		for (int i = 0; i < industrialSites.size(); i++) {
-//			buttonsRows.add(List.of(getButton(industrialSites.get(i),industrialSites.get(i) + "," + barcode)));
-//		}
-//		kb.setKeyboard(buttonsRows);
-//		execute(collectAnswer(chatId, "Выберите пром.площадку -->", kb));
-//	}
-//
-//	@SneakyThrows
-//	private void getDeclarationByErpCode(String code, Long chatId) {
-//		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
-//				execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-//			return;
-//		}
-//		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
-//		try {
-//			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
-//			if (existedProduct.isPresent()) { // если товар найден
-//				downloadDeclaration(List.of(existedProduct.get()));
-//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//			} else {
-//				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
-//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//			}
-//		} catch (InvalidDataAccessResourceUsageException e) {
-//				execute(collectAnswer(chatId, ERROR_BAD_SQL));
-//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//		}
-//	}
-//
-//	@SneakyThrows
-//	private void getLabelMockupsByErpCode(String code, Long chatId) {
-//		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
-//			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-//			return;
-//		}
-//		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
-//		try {
-//			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
-//			if (existedProduct.isPresent()) { // если товар найден
-//				downloadDeclaration(List.of(existedProduct.get()));
-//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//			} else {
-//				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
-//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//			}
-//		} catch (InvalidDataAccessResourceUsageException e) {
-//			execute(collectAnswer(chatId, ERROR_BAD_SQL));
-//			execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//		}
-//
-//	}
-//
-//	@SneakyThrows
-//	private void downloadDeclaration(List<Product> products) {
-//		for (Product prod : products) {
-//			List<Declaration> productDeclarations = prod.getDeclarations();
-//			List<String> pathToFiles = productDeclarations.stream()
-//					.map(dec -> PATH_DIR_DECLARATIONS + dec.getFileName())
-//					.toList();
-//			List<File> files = pathToFiles.stream()
-//					.map(File::new)
-//					.toList();
-//			for (File file : files) {
-//				if (file.exists() && !file.isDirectory()) {
-//					execute(SendDocument.builder()
-//							.chatId(chatId)
-//							.document(new InputFile(file))
-//							.build());
-//				} else {
-//					execute(collectAnswer(chatId, ERROR_FILE_NOT_FOUND));
-//					execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-//				}
-//			}
-//		}
-//	}
-//
+
+	@SneakyThrows
+	private void getDeclarationByIndustrialSiteAndBarcode(Bot bot, String indSiteAndBarcode, Long chatId) {
+		//под 0 - площадка, под 1 - штрихкод
+		String[] data = indSiteAndBarcode.split(",");
+		List<Product> products = productRepo.findByIndustrialSiteAndBarcode(data[0], data[1]);
+		downloadDeclaration(bot, products);
+		bot.execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
+	}
+
+	@SneakyThrows
+	private void getIndustrialSites(Bot bot, String barcode, Long chatId) {
+		if (isStringNotNumeric(barcode)) { //проверка что сообщение не содержит букв
+			bot.execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+			return;
+		}
+		List<String> industrialSites = productRepo.getIndustrialSitesByProductBarcode(barcode);
+		if (industrialSites.isEmpty()) {
+			bot.execute(collectAnswer(chatId, "Не найдены пром.площадки для выбора"));
+			bot.execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
+			return;
+		}
+		InlineKeyboardMarkup kb = new InlineKeyboardMarkup();
+		List<List<InlineKeyboardButton>> buttonsRows = new ArrayList<>();
+		for (int i = 0; i < industrialSites.size(); i++) {
+			buttonsRows.add(List.of(getButton(industrialSites.get(i),industrialSites.get(i) + "," + barcode)));
+		}
+		kb.setKeyboard(buttonsRows);
+		bot.execute(collectAnswer(chatId, "Выберите пром.площадку -->", kb));
+	}
+
+	@SneakyThrows
+	private void getDeclarationByErpCode(Bot bot, String code, Long chatId) {
+		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
+				bot.execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+			return;
+		}
+		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
+		try {
+			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
+			if (existedProduct.isPresent()) { // если товар найден
+				downloadDeclaration(bot, List.of(existedProduct.get()));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+			} else {
+				bot.execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+			}
+		} catch (InvalidDataAccessResourceUsageException e) {
+				bot.execute(collectAnswer(chatId, ERROR_BAD_SQL));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+		}
+	}
+
+	@SneakyThrows
+	private Optional<Product> gp(Bot bot, String code, Long chatId) {
+		while (true) {
+			try {
+				isStringNotNumeric(code);
+				Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
+				return productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
+			} catch (InvalidUserInputException e) {
+				bot.execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+				bot.execute(collectAnswer(chatId, "Повторите попытку ===>"));
+				break;
+			} catch (InvalidDataAccessResourceUsageException e) {
+				bot.execute(collectAnswer(chatId, ERROR_BAD_SQL));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+				break;
+			}
+		}
+		return Optional.empty();
+	}
+
+	@SneakyThrows
+	private void getLabelMockupsByErpCode(Bot bot, String code, Long chatId) {
+		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
+			bot.execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+			return;
+		}
+		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
+		try {
+			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
+			if (existedProduct.isPresent()) { // если товар найден
+				downloadDeclaration(bot, List.of(existedProduct.get()));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+			} else {
+				bot.execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
+				bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+			}
+		} catch (InvalidDataAccessResourceUsageException e) {
+			bot.execute(collectAnswer(chatId, ERROR_BAD_SQL));
+			bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+		}
+
+	} //TODO
+
+	@SneakyThrows
+	private void downloadDeclaration(Bot bot, List<Product> products) {
+		for (Product prod : products) {
+			List<Declaration> productDeclarations = prod.getDeclarations();
+			List<String> pathToFiles = productDeclarations.stream()
+					.map(dec -> PATH_DIR_DECLARATIONS + dec.getFileName())
+					.toList();
+			List<File> files = pathToFiles.stream()
+					.map(File::new)
+					.toList();
+			for (File file : files) {
+				if (file.exists() && !file.isDirectory()) {
+					bot.execute(SendDocument.builder()
+							.chatId(chatId)
+							.document(new InputFile(file))
+							.build());
+				} else {
+					bot.execute(collectAnswer(chatId, ERROR_FILE_NOT_FOUND));
+					bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+				}
+			}
+		}
+	}
+
 	@SneakyThrows
 	private void doAuthorization(Bot bot, String email) {
 		Optional<User> user = userService.getUser(email); //проверка в БД на наличие пользователя
@@ -276,33 +286,32 @@ public class BotService {
 				.build();
 	}
 
-//	private boolean isStringNotNumeric(String string) {
-//		try {
-//			Long.parseLong(string);
-//			return false;
-//		} catch (NumberFormatException e) {
-//			return true;
-//		}
-//	}
-//
-//	private Long cutFrontZero(String code) { //Обрезает все нули спереди до первого "не ноля"
-//		List<String> charList = new ArrayList<>(Arrays.asList(code.split("")));
-//
-//		for (Iterator<String> it = charList.iterator(); it.hasNext();) {
-//			if (it.next().equals("0")) {
-//				it.remove();
-//			} else {
-//				break;
-//			}
-//		}
-//		return Long.parseLong(String.join("", charList));
-//	}
-//
-//	private InlineKeyboardMarkup getDocumentTypesKeyboard() {
-//		return InlineKeyboardMarkup.builder()
-//				.keyboardRow(List.of(getButton("Декларация соответствия", GET_DECLARATION)))
-//				.keyboardRow(List.of(getButton("Качественное удостоверение", GET_QUALITY)))
-//				.keyboardRow(List.of(getButton("Макет этикетки", GET_LABEL_MOCKUP)))
-//				.build();
-//	}
+	private void isStringNotNumeric(String string) {
+		try {
+			Long.parseLong(string);
+		} catch (NumberFormatException e) {
+			throw new InvalidUserInputException("Введенное значение не является числом");
+		}
+	}
+
+	private Long cutFrontZero(String code) { //Обрезает все нули спереди до первого "не ноля"
+		List<String> charList = new ArrayList<>(Arrays.asList(code.split("")));
+
+		for (Iterator<String> it = charList.iterator(); it.hasNext();) {
+			if (it.next().equals("0")) {
+				it.remove();
+			} else {
+				break;
+			}
+		}
+		return Long.parseLong(String.join("", charList));
+	}
+
+	private InlineKeyboardMarkup getDocumentTypesKeyboard() {
+		return InlineKeyboardMarkup.builder()
+				.keyboardRow(List.of(getButton("Декларация соответствия", GET_DECLARATION)))
+				.keyboardRow(List.of(getButton("Качественное удостоверение", GET_QUALITY)))
+				.keyboardRow(List.of(getButton("Макет этикетки", GET_LABEL_MOCKUP)))
+				.build();
+	}
 }
